--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -351,7 +351,7 @@ spec:
         {{- range $i, $val := .Values.azureFile.mounts }}
         - name: {{ $val.name }}
           azureFile:
-            secretName: {{ include "microservice-chart.fullname" $ }}
+            secretName: {{ include "microservice-chart.fullname" $ }}-azure-file
             shareName: {{ $val.shareName }}
             readOnly: {{ $val.readOnly }}
             {{- end }}
